1.排班模板增加一个按天还是按次来应用规则 2.补签增加至6个时间点 3.树状结构的人员按名称排序

--- a/Source/Ralid.Attendance.BLL/Ralid.Attendance.BLL.csproj
+++ b/Source/Ralid.Attendance.BLL/Ralid.Attendance.BLL.csproj
@@ -63,7 +63,7 @@
     <Compile Include="ParameterBLL.cs" />
     <Compile Include="ReaderBLL.cs" />
     <Compile Include="ShiftArrangeBLL.cs" />
-    <Compile Include="ShiftArrangeTemplateBLL.cs" />
+    <Compile Include="ShiftTemplateBLL.cs" />
     <Compile Include="AttendanceResultBLL.cs" />
     <Compile Include="SystemOptionsBLL.cs" />
     <Compile Include="DatabaseUpgrader.cs" />
