--- a/Source/Ralid.Attendance.Model/Ralid.Attendance.Model.csproj
+++ b/Source/Ralid.Attendance.Model/Ralid.Attendance.Model.csproj
@@ -70,7 +70,7 @@
     <Compile Include="SearchCondition\TASheetSearchCondition.cs" />
     <Compile Include="ShiftArrange.cs" />
     <Compile Include="ShiftArrangeID.cs" />
-    <Compile Include="ShiftArrangeTemplate.cs" />
+    <Compile Include="ShiftTemplate.cs" />
     <Compile Include="ShiftTimezone.cs" />
     <Compile Include="AttendanceResult.cs" />
     <Compile Include="PermissionDescription.cs" />
