1.人员信息增加一个“离职”功能 2.考勤原始记录将同一张卡刷卡日期相同的其它记录剔除

--- a/Source/Ralid.Attendance.DAL/Ralid.Attendance.DAL.csproj
+++ b/Source/Ralid.Attendance.DAL/Ralid.Attendance.DAL.csproj
@@ -97,6 +97,7 @@
     <Compile Include="LinqDataProvider\SysparameterProvider.cs" />
     <Compile Include="LinqDataProvider\TripTypeProvider.cs" />
     <Compile Include="LinqDataProvider\T_OperatorDept.cs" />
+    <Compile Include="LinqDataProvider\T_ResignStaff.cs" />
     <Compile Include="LinqDataProvider\T_ShiftArrange.cs" />
     <Compile Include="LinqDataProvider\T_ShiftArrangeTemplate.cs" />
     <Compile Include="LinqDataProvider\T_StaffDepartmentPair.cs" />
