1.继续考勤结果

--- a/Source/Ralid.Attendance.Model/Ralid.Attendance.Model.csproj
+++ b/Source/Ralid.Attendance.Model/Ralid.Attendance.Model.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbsentItem.cs" />
     <Compile Include="ACSDepartment.cs" />
     <Compile Include="ACSStaff.cs" />
     <Compile Include="AppSettings.cs" />
