1.完成考勤月统计表

--- a/Source/Ralid.Attendance.Model/Ralid.Attendance.Model.csproj
+++ b/Source/Ralid.Attendance.Model/Ralid.Attendance.Model.csproj
@@ -50,6 +50,8 @@
     <Compile Include="ACSDepartment.cs" />
     <Compile Include="ACSStaff.cs" />
     <Compile Include="AppSettings.cs" />
+    <Compile Include="AttendanceDuration.cs" />
+    <Compile Include="AttendanceResultGroup.cs" />
     <Compile Include="AttendanceRules.cs" />
     <Compile Include="AttendanceUnit.cs" />
     <Compile Include="HolidaySetting.cs" />
