--- a/Source/LJH.Attendance.BLL/LJH.Attendance.BLL.csproj
+++ b/Source/LJH.Attendance.BLL/LJH.Attendance.BLL.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{BAB9FBE7-1614-41D5-9404-0B9982819E32}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ralid.Attendance.BLL</RootNamespace>
+    <RootNamespace>LJH.Attendance.BLL</RootNamespace>
     <AssemblyName>Ralid.Attendance.BLL</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -89,6 +89,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Resource1.resx">
       <Generator>ResXFileCodeGenerator</Generator>
