--- a/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
+++ b/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{D7B0DDB7-3F9D-4585-A6B2-E09EF334C835}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ralid.Attendance.UI</RootNamespace>
+    <RootNamespace>LJH.Attendance.UI</RootNamespace>
     <AssemblyName>Ralid.Attendance.UI</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
