--- a/Source/LJH.Attendance.UI/App.config
+++ b/Source/LJH.Attendance.UI/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings >
-    <add key ="ConnectString" value =""/>
+  <appSettings>
+    <add key="ConnectString" value="+{.GUnbYR^|G.\)#U^z6JT1x#u(c[v|omH qOUfFYd?DacD3_zQ^~[um#?(?[,C]Bo4-54t3plW[|tlO/gS.yQ&amp;A:iAbuV7uA&gt;l5suNlh2r8PkNiNtxi*RFNQi,|R 5n@R)Y#:X?\DRlh6s8EdB7m" />
     <!--数据库连接字符串-->
-    <add key="Language" value=""/>
+    <add key="Language" value="" />
     <!--设置系统的语言 zh-CHS 表示中文简体  zh-CHT 表示中文繁体  en 表示英文-->
     <add key="RememberLogID" value="True" />
     <!--是否记住登录名-->
