--- a/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
+++ b/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
@@ -696,6 +696,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="attendance.ico" />
+    <None Include="Resources\template.png" />
     <None Include="Resources\img15.jpg" />
   </ItemGroup>
   <ItemGroup>
