1.增加用sqlite做本地数据库的演示版软件

--- a/Source/Attendance/Attendance.csproj
+++ b/Source/Attendance/Attendance.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{BAB9FBE7-1614-41D5-9404-0B9982819E32}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{74839491-84C1-4285-85D9-38CBCFF2A38F}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LJH.Attendance.BLL</RootNamespace>
-    <AssemblyName>Ralid.Attendance.BLL</AssemblyName>
+    <RootNamespace>Attendance</RootNamespace>
+    <AssemblyName>Attendance</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -34,15 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="LJH.GeneralLibrary">
       <HintPath>..\Reference\LJH.GeneralLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="SqlClientHelper">
-      <HintPath>..\Reference\SqlClientHelper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -56,29 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AttendanceLogBLL.cs" />
-    <Compile Include="HolidayBLL.cs" />
-    <Compile Include="OTTypeBLL.cs" />
-    <Compile Include="ParameterBLL.cs" />
-    <Compile Include="ReaderBLL.cs" />
-    <Compile Include="ShiftArrangeBLL.cs" />
-    <Compile Include="ShiftTemplateBLL.cs" />
-    <Compile Include="AttendanceResultBLL.cs" />
-    <Compile Include="DatabaseUpgrader.cs" />
-    <Compile Include="DepartmentBLL.cs" />
-    <Compile Include="OperatorBll.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resource1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resource1.resx</DependentUpon>
-    </Compile>
-    <Compile Include="RoleBll.cs" />
-    <Compile Include="ShiftBLL.cs" />
-    <Compile Include="StaffBLL.cs" />
-    <Compile Include="TASheetBLL.cs" />
-    <Compile Include="TripTypeBLL.cs" />
-    <Compile Include="VacationTypeBLL.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -89,10 +62,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Resource1.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -104,13 +74,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LJH.Attendance.DAL\LJH.Attendance.DAL.csproj">
-      <Project>{97F98875-128D-4DE0-B169-28D9E41A559F}</Project>
-      <Name>LJH.Attendance.DAL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LJH.Attendance.Model\LJH.Attendance.Model.csproj">
-      <Project>{E5BCDE1E-DC97-4956-BEAB-CA7720C8EEF5}</Project>
-      <Name>LJH.Attendance.Model</Name>
+    <ProjectReference Include="..\LJH.Attendance.UI\LJH.Attendance.UI.csproj">
+      <Project>{D7B0DDB7-3F9D-4585-A6B2-E09EF334C835}</Project>
+      <Name>LJH.Attendance.UI</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
