--- a/Source/AttendanceDemo/app.config
+++ b/Source/AttendanceDemo/app.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="ConnectString" value="+{.GUnbYR^|G.\)#U^z6JT1x#u(c[v|omH qOUfFYd?DacD3_zQ^~[um#?(?[,C]Bo4-54t3plW[|tlO/gS.yQ&amp;A:iAbuV7uA&gt;l5suNlh2r8PkNiNtxi*RFNQi,|R 5n@R)Y#:X?\DRlh6s8EdB7m" />
+    <add key="ConnectString" value="" />
     <!--数据库连接字符串-->
     <add key="Language" value="" />
     <!--设置系统的语言 zh-CHS 表示中文简体  zh-CHT 表示中文繁体  en 表示英文-->
@@ -10,4 +10,7 @@
     <add key="NeedPasswordWhenExit" value="False" />
     <!--是否退出需要登录密钥验证-->
   </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
 </configuration>
