--- a/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
+++ b/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
@@ -6,12 +6,13 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{D7B0DDB7-3F9D-4585-A6B2-E09EF334C835}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LJH.Attendance.UI</RootNamespace>
     <AssemblyName>Ralid.Attendance.UI</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -35,6 +36,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>attendance.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="LJH.GeneralLibrary">
@@ -183,11 +187,23 @@
     <Compile Include="FrmLogin.designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmLoginDemo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmLoginDemo.designer.cs">
+      <DependentUpon>FrmLoginDemo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmMain.Designer.cs">
+    <Compile Include="FrmMain.designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmMainDemo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmMainDemo.Designer.cs">
+      <DependentUpon>FrmMainDemo.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmManualLog.cs">
       <SubType>Form</SubType>
@@ -371,7 +387,6 @@
     </Compile>
     <Compile Include="ItemAddedEventArgs.cs" />
     <Compile Include="ItemUpdatedEventArgs.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource1.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -468,8 +483,20 @@
     <EmbeddedResource Include="FrmLogin.zh-Hant.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmLoginDemo.en.resx">
+      <DependentUpon>FrmLoginDemo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmLoginDemo.resx">
+      <DependentUpon>FrmLoginDemo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmLoginDemo.zh-Hant.resx">
+      <DependentUpon>FrmLoginDemo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmMainDemo.resx">
+      <DependentUpon>FrmMainDemo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmManualLog.resx">
       <DependentUpon>FrmManualLog.cs</DependentUpon>
@@ -611,7 +638,6 @@
     <EmbeddedResource Include="FrmSystemOptions.resx">
       <DependentUpon>FrmSystemOptions.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
