1.制作一个演示版软件， 2.更新TAAttendanceLog 和 TASheet 的主键

--- a/Source/LJH.Attendance.BLL/LJH.Attendance.BLL.csproj
+++ b/Source/LJH.Attendance.BLL/LJH.Attendance.BLL.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LJH.Attendance.BLL</RootNamespace>
-    <AssemblyName>Ralid.Attendance.BLL</AssemblyName>
+    <AssemblyName>LJH.Attendance.BLL</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
