--- a/Source/LJH.Attendance.Model/LJH.Attendance.Model.csproj
+++ b/Source/LJH.Attendance.Model/LJH.Attendance.Model.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LJH.Attendance.Model</RootNamespace>
-    <AssemblyName>Ralid.Attendance.Model</AssemblyName>
+    <AssemblyName>LJH.Attendance.Model</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
