--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,5 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+/Source/Reference/SecurityDLL
+/Source/代码混淆器项目/Dotfuscated
