--- a/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
+++ b/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
@@ -44,12 +44,14 @@
     <Reference Include="LJH.GeneralLibrary">
       <HintPath>..\Reference\LJH.GeneralLibrary.dll</HintPath>
     </Reference>
+    <Reference Include="Ralid.GeneralLibrary, Version=2.0.2013.923, Culture=neutral, processorArchitecture=x86" />
     <Reference Include="SqlClientHelper, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Reference\SqlClientHelper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -420,6 +422,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAttendanceLogReport.resx">
       <DependentUpon>FrmAttendanceLogReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmReaderDetail.resx">
+      <DependentUpon>FrmReaderDetail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmReaderMaster.resx">
       <DependentUpon>FrmReaderMaster.cs</DependentUpon>
