--- a/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
+++ b/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
@@ -41,6 +41,10 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Interop.ZKFPEngXControl">
+      <HintPath>..\Reference\Interop.ZKFPEngXControl.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="LJH.GeneralLibrary">
       <HintPath>..\Reference\LJH.GeneralLibrary.dll</HintPath>
     </Reference>
@@ -109,6 +113,12 @@
     </Compile>
     <Compile Include="FrmAttendanceLogReport.Designer.cs">
       <DependentUpon>FrmAttendanceLogReport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmFingerResgister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmFingerResgister.Designer.cs">
+      <DependentUpon>FrmFingerResgister.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmReaderMaster.cs">
       <SubType>Form</SubType>
@@ -421,6 +431,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAttendanceLogReport.resx">
       <DependentUpon>FrmAttendanceLogReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmFingerResgister.resx">
+      <DependentUpon>FrmFingerResgister.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmReaderDetail.resx">
       <DependentUpon>FrmReaderDetail.cs</DependentUpon>
@@ -735,6 +748,17 @@
       <Project>{E5BCDE1E-DC97-4956-BEAB-CA7720C8EEF5}</Project>
       <Name>LJH.Attendance.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="stdole">
+      <Guid>{00020430-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
