1.人员信息增加入职日期，性别等几个属性 2.人员照片可以增加，删除

--- a/Source/LJH.Attendance.DAL/LJH.Attendance.DAL.csproj
+++ b/Source/LJH.Attendance.DAL/LJH.Attendance.DAL.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="IDAL\IAttendanceLogProvider.cs" />
     <Compile Include="IDAL\IIntegerCreater.cs" />
+    <Compile Include="IDAL\IStaffPhotoProvider.cs" />
     <Compile Include="IDAL\IStringIDCreater.cs" />
     <Compile Include="IDAL\IDepartmentProvider.cs" />
     <Compile Include="IDAL\IHolidayProvider.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="IDAL\IVacationTypeProvider.cs" />
     <Compile Include="LinqDataProvider\AttendanceLogProvider.cs" />
     <Compile Include="LinqDataProvider\IntegerIDCreater.cs" />
+    <Compile Include="LinqDataProvider\StaffPhotoProvider.cs" />
     <Compile Include="LinqDataProvider\StringIDCreater.cs" />
     <Compile Include="LinqDataProvider\DepartmentProvider.cs" />
     <Compile Include="LinqDataProvider\HolidayProvider.cs" />
