1.增加人员类别管理 2.软件退出时增加询问

--- a/Source/LJH.Attendance.BLL/LJH.Attendance.BLL.csproj
+++ b/Source/LJH.Attendance.BLL/LJH.Attendance.BLL.csproj
@@ -76,6 +76,7 @@
     <Compile Include="RoleBll.cs" />
     <Compile Include="ShiftBLL.cs" />
     <Compile Include="StaffBLL.cs" />
+    <Compile Include="StaffCategoryBLL.cs" />
     <Compile Include="TASheetBLL.cs" />
     <Compile Include="TripTypeBLL.cs" />
     <Compile Include="VacationTypeBLL.cs" />
