--- a/Source/LJH.Attendance.DAL/LJH.Attendance.DAL.csproj
+++ b/Source/LJH.Attendance.DAL/LJH.Attendance.DAL.csproj
@@ -60,6 +60,7 @@
     <Compile Include="IDAL\IAttendanceLogProvider.cs" />
     <Compile Include="IDAL\IIntegerCreater.cs" />
     <Compile Include="IDAL\IStaffBioTemplateProvider.cs" />
+    <Compile Include="IDAL\IStaffCategoryProvider.cs" />
     <Compile Include="IDAL\IStaffPhotoProvider.cs" />
     <Compile Include="IDAL\IStringIDCreater.cs" />
     <Compile Include="IDAL\IDepartmentProvider.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="LinqDataProvider\AttendanceLogProvider.cs" />
     <Compile Include="LinqDataProvider\IntegerIDCreater.cs" />
     <Compile Include="LinqDataProvider\StaffBioTemplateProvider.cs" />
+    <Compile Include="LinqDataProvider\StaffCategoryProvider.cs" />
     <Compile Include="LinqDataProvider\StaffPhotoProvider.cs" />
     <Compile Include="LinqDataProvider\StringIDCreater.cs" />
     <Compile Include="LinqDataProvider\DepartmentProvider.cs" />
