1.门禁考勤设备从Reader重命名成DeviceInfo

--- a/Source/LJH.Attendance.BLL/LJH.Attendance.BLL.csproj
+++ b/Source/LJH.Attendance.BLL/LJH.Attendance.BLL.csproj
@@ -60,7 +60,7 @@
     <Compile Include="HolidayBLL.cs" />
     <Compile Include="OTTypeBLL.cs" />
     <Compile Include="ParameterBLL.cs" />
-    <Compile Include="ReaderBLL.cs" />
+    <Compile Include="DeviceInfoBLL.cs" />
     <Compile Include="ShiftArrangeBLL.cs" />
     <Compile Include="ShiftTemplateBLL.cs" />
     <Compile Include="AttendanceResultBLL.cs" />
